--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -39,8 +39,7 @@
     <servlet-name>register</servlet-name>
     <url-pattern>/register</url-pattern>
   </servlet-mapping>
-  
-    <servlet>
+  <servlet>
     <description></description>
     <display-name>login</display-name>
     <servlet-name>login</servlet-name>
@@ -49,5 +48,25 @@
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>profile</display-name>
+    <servlet-name>profile</servlet-name>
+    <servlet-class>profile.Profile</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>profile</servlet-name>
+    <url-pattern>/profile</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>problemDetails</display-name>
+    <servlet-name>problemDetails</servlet-name>
+    <servlet-class>profile.ProblemDetails</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>problemDetails</servlet-name>
+    <url-pattern>/problemDetails</url-pattern>
   </servlet-mapping>
 </web-app>
